# Mutsumi-s-PERS

./: AGENTS.md  CHANGELOG.md  README.md  opencode.json  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml
assets/brand/: BRAND.md  preview.html
docs/requirements/: 2026-06-30-project-workbench-pages.md
docs/superpowers/plans/: 2026-05-19-mutsumi-launcher-plan.md
docs/superpowers/specs/: 2026-05-19-mutsumi-launcher-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  store.rs
src-tauri/src/commands/: editors.rs  git.rs  group.rs  mod.rs  projects.rs  settings.rs  template_manager.rs  templates.rs
src/components/: ActionButton.tsx  CreateProjectDialog.tsx  GitView.tsx  GroupHeaderItem.tsx  GroupSlotItem.tsx  HomeView.tsx  LeftNav.tsx  OverlayCard.tsx  ProjectDetail.tsx  ProjectItem.tsx  ProjectList.tsx  RightPanel.tsx  SettingsView.tsx  SetupWizard.tsx  SortableTreeItem.tsx  TemplateView.tsx  TemplatesView.tsx  Toast.tsx  UpdateModal.tsx
src/lib/: draglog.ts  i18n.ts  projectContextMenu.ts  store.ts  tauri.ts  theme.ts
src/lib/__tests__/: projectContextMenu.test.ts
src/lib/drag/: deterministic.ts  dropAnimation.ts  flip.ts  index.ts  intent.ts  preview.ts  reorderAnimation.ts  snapshot.ts  state.ts  zone.ts
src/lib/drag/__tests__/: deterministic.test.ts  dropAnimation.test.ts  logic.test.ts  reorderAnimation.test.ts  setup.ts
